# expo-builder-local

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
apt/: pubkey.gpg
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages
apt/pool/main/e/ebl/: ebl_0.4.3_amd64.deb  ebl_0.5.1_amd64.deb
cli/: CMakeLists.txt
cli/src/: base64.cpp  base64.hpp  color.hpp  config_store.cpp  config_store.hpp  crypto.cpp  crypto.hpp  detect.cpp  detect.hpp  docker_client.cpp  docker_client.hpp  http_client.cpp  http_client.hpp  json.cpp  json.hpp  main.cpp  metrics.cpp  metrics.hpp  runner_context.cpp  runner_context.hpp  tar_writer.cpp  tar_writer.hpp
cli/src/commands/: build.cpp  build.hpp  config.cpp  config.hpp  setup.cpp  setup.hpp  start.cpp  start.hpp
docker/runner/: Dockerfile  build-entrypoint.sh  docker-entrypoint.sh
docker/runner/scripts/: patch-android-signing.js  write-eas-credentials.js
docs/: APT_REPO_SETUP_GUIDE.md  CHANGELOG.md  DOCKER.md  RELEASING.md
docs/apt/: README.md
expo-builder-gui/: Dockerfile  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
expo-builder-gui/app/: globals.css  layout.tsx  page.tsx
expo-builder-gui/app/history/: page.tsx
expo-builder-gui/components/: BuildConfigForm.tsx  BuildTimeline.tsx  DirectoryBrowser.tsx  KeystoreManager.tsx  LiveLogs.tsx  MetricsPanel.tsx  ResourceCharts.tsx  StatusPill.tsx
expo-builder-gui/lib/: api.ts  types.ts  useBuildSocket.ts  useIsDarkMode.ts
orchestrator/: Dockerfile  package.json  tsconfig.json
orchestrator/src/: config.ts  server.ts  types.ts
orchestrator/src/docker/: runner.ts  stats.ts
orchestrator/src/routes/: builds.ts  fs.ts  keystores.ts
orchestrator/src/store/: db.ts
orchestrator/src/util/: crypto.ts  lineBuffer.ts  redact.ts
orchestrator/src/ws/: hub.ts
scripts/: publish-images.sh
